--- a/products.html
+++ b/products.html
@@ -21,7 +21,7 @@
     <link rel="stylesheet" href="css/aos.css">
     <link rel="stylesheet" href="css/animate.css">
     <link rel="stylesheet" href="style.css">
-    <!-- <link rel="canonical" href="index.html" /> -->
+
 
 
     <script src="js/jquery-3.6.0.min.js"></script>
@@ -59,11 +59,9 @@
                 <i class="fas fa-bars " id="hideButton" onclick="showMenu()"></i>
             </nav>
         </div>
-
-
         <section id="productPage" class="work-box">
             <div class="cntr">
-                <div id="ProductsMenu" class="products-menu">
+                <div id="ProductsMenu" class="products-menu" data-aos="fade-right">
 
                     <ul>
                         <li class=" mixitup-control-active" data-filter="*"> All
@@ -81,7 +79,7 @@
 
 
 
-                <div class="products-list">
+                <div class="products-list" data-aos="fade-left">
                     <div class="mix products-item denims">
                         <img src="images/products/img1.jpg" alt="">
                     </div>
